fixed loading flicker for nav

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,6 +16,7 @@
         align-items: center;
 
         & .nav__item {
+            opacity: 0;
             cursor: pointer;
             position: relative;
             padding-block: 1rem;
